--- a/chaperone.conf
+++ b/chaperone.conf
@@ -3,7 +3,11 @@ node.service: {
   command: "/code/app.js runserver",
   service_groups: INIT,
   restart: true,
-  stdout: inherit,
-  stderr: inherit,
+  #stdout: inherit,
+  #stderr: inherit,
 }
 
+console.logging: {
+  selector: '*.info',
+  stdout: true,
+}
