--- a/chaperone.conf
+++ b/chaperone.conf
@@ -1,7 +1,7 @@
 
 node.service: {
   command: "/code/app.js runserver",
-  service_groups: INIT,
+  service_groups: IDLE,
   restart: true,
   #stdout: inherit,
   #stderr: inherit,
