--- a/chaperone.conf
+++ b/chaperone.conf
@@ -1,10 +1,15 @@
+settings: {
+  env_set: {
+    'runserver':'${_runserver}',
+    'create_index':'${_create_index}',
+    PARAMS: "${_runserver} ${_create_index}",
+  }
+}
 
 node.service: {
-  command: "/code/app.js runserver",
+  command: "/code/app.js ${PARAMS}",
   service_groups: IDLE,
-  restart: true,
-  #stdout: inherit,
-  #stderr: inherit,
+  #restart: true,
 }
 
 console.logging: {
